Completo/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    RBOOLEAN

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     ptc -> PTCOMA
Rule 5     ptc -> <empty>
Rule 6     instruccion -> variables ptc
Rule 7     instruccion -> imprimir ptc
Rule 8     instruccion -> if
Rule 9     instruccion -> while
Rule 10    instruccion -> break ptc
Rule 11    instruccion -> error
Rule 12    incdec -> INC
Rule 13    incdec -> DEC
Rule 14    incdec -> <empty>
Rule 15    variables -> RVAR ID
Rule 16    variables -> RVAR ID IGUAL expresion
Rule 17    variables -> RVAR ID IGUAL casteo
Rule 18    variables -> ID IGUAL expresion
Rule 19    variables -> ID IGUAL casteo
Rule 20    variables -> ID IGUAL RNULL
Rule 21    variables -> ID incdec
Rule 22    casteo -> PARA tipo PARC expresion
Rule 23    tipo -> RINT
Rule 24    tipo -> RDOUBLE
Rule 25    tipo -> RCHAR
Rule 26    tipo -> RSTRING
Rule 27    expresion -> expresion MAS expresion
Rule 28    expresion -> expresion MENOS expresion
Rule 29    expresion -> expresion POR expresion
Rule 30    expresion -> expresion DIV expresion
Rule 31    expresion -> expresion POT expresion
Rule 32    expresion -> expresion MOD expresion
Rule 33    expresion -> expresion MENORQUE expresion
Rule 34    expresion -> expresion MAYORQUE expresion
Rule 35    expresion -> expresion MENORIGUAL expresion
Rule 36    expresion -> expresion MAYORIGUAL expresion
Rule 37    expresion -> expresion IGUALIGUAL expresion
Rule 38    expresion -> expresion DIFERENTE expresion
Rule 39    expresion -> expresion AND expresion
Rule 40    expresion -> expresion OR expresion
Rule 41    expresion -> MENOS expresion
Rule 42    expresion -> NOT expresion
Rule 43    expresion -> PARA expresion PARC
Rule 44    expresion -> ID incdec
Rule 45    expresion -> ENTERO incdec
Rule 46    expresion -> DECIMAL incdec
Rule 47    expresion -> CADENA
Rule 48    expresion -> CHARACTER
Rule 49    expresion -> RTRUE
Rule 50    expresion -> RFALSE
Rule 51    if -> RIF PARA expresion PARC LLAVEA instrucciones LLAVEC
Rule 52    if -> RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE LLAVEA instrucciones LLAVEC
Rule 53    if -> RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE if
Rule 54    while -> RWHILE PARA expresion PARC LLAVEA instrucciones LLAVEC
Rule 55    break -> RBREAK
Rule 56    imprimir -> RPRINT PARA expresion PARC

Terminals, with rules where they appear

AND                  : 39
CADENA               : 47
CHARACTER            : 48
DEC                  : 13
DECIMAL              : 46
DIFERENTE            : 38
DIV                  : 30
ENTERO               : 45
ID                   : 15 16 17 18 19 20 21 44
IGUAL                : 16 17 18 19 20
IGUALIGUAL           : 37
INC                  : 12
LLAVEA               : 51 52 52 53 54
LLAVEC               : 51 52 52 53 54
MAS                  : 27
MAYORIGUAL           : 36
MAYORQUE             : 34
MENORIGUAL           : 35
MENORQUE             : 33
MENOS                : 28 41
MOD                  : 32
NOT                  : 42
OR                   : 40
PARA                 : 22 43 51 52 53 54 56
PARC                 : 22 43 51 52 53 54 56
POR                  : 29
POT                  : 31
PTCOMA               : 4
RBOOLEAN             : 
RBREAK               : 55
RCHAR                : 25
RDOUBLE              : 24
RELSE                : 52 53
RFALSE               : 50
RIF                  : 51 52 53
RINT                 : 23
RNULL                : 20
RPRINT               : 56
RSTRING              : 26
RTRUE                : 49
RVAR                 : 15 16 17
RWHILE               : 54
error                : 11

Nonterminals, with rules where they appear

break                : 10
casteo               : 17 19
expresion            : 16 18 22 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 42 43 51 52 53 54 56
if                   : 8 53
imprimir             : 7
incdec               : 21 44 45 46
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2 51 52 52 53 54
ptc                  : 6 7 10
tipo                 : 22
variables            : 6
while                : 9

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (6) instruccion -> . variables ptc
    (7) instruccion -> . imprimir ptc
    (8) instruccion -> . if
    (9) instruccion -> . while
    (10) instruccion -> . break ptc
    (11) instruccion -> . error
    (15) variables -> . RVAR ID
    (16) variables -> . RVAR ID IGUAL expresion
    (17) variables -> . RVAR ID IGUAL casteo
    (18) variables -> . ID IGUAL expresion
    (19) variables -> . ID IGUAL casteo
    (20) variables -> . ID IGUAL RNULL
    (21) variables -> . ID incdec
    (56) imprimir -> . RPRINT PARA expresion PARC
    (51) if -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC
    (52) if -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE LLAVEA instrucciones LLAVEC
    (53) if -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE if
    (54) while -> . RWHILE PARA expresion PARC LLAVEA instrucciones LLAVEC
    (55) break -> . RBREAK

    error           shift and go to state 9
    RVAR            shift and go to state 10
    ID              shift and go to state 11
    RPRINT          shift and go to state 12
    RIF             shift and go to state 13
    RWHILE          shift and go to state 14
    RBREAK          shift and go to state 15

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    variables                      shift and go to state 4
    imprimir                       shift and go to state 5
    if                             shift and go to state 6
    while                          shift and go to state 7
    break                          shift and go to state 8

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (6) instruccion -> . variables ptc
    (7) instruccion -> . imprimir ptc
    (8) instruccion -> . if
    (9) instruccion -> . while
    (10) instruccion -> . break ptc
    (11) instruccion -> . error
    (15) variables -> . RVAR ID
    (16) variables -> . RVAR ID IGUAL expresion
    (17) variables -> . RVAR ID IGUAL casteo
    (18) variables -> . ID IGUAL expresion
    (19) variables -> . ID IGUAL casteo
    (20) variables -> . ID IGUAL RNULL
    (21) variables -> . ID incdec
    (56) imprimir -> . RPRINT PARA expresion PARC
    (51) if -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC
    (52) if -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE LLAVEA instrucciones LLAVEC
    (53) if -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE if
    (54) while -> . RWHILE PARA expresion PARC LLAVEA instrucciones LLAVEC
    (55) break -> . RBREAK

    $end            reduce using rule 1 (init -> instrucciones .)
    error           shift and go to state 9
    RVAR            shift and go to state 10
    ID              shift and go to state 11
    RPRINT          shift and go to state 12
    RIF             shift and go to state 13
    RWHILE          shift and go to state 14
    RBREAK          shift and go to state 15

    instruccion                    shift and go to state 16
    variables                      shift and go to state 4
    imprimir                       shift and go to state 5
    if                             shift and go to state 6
    while                          shift and go to state 7
    break                          shift and go to state 8

state 3

    (3) instrucciones -> instruccion .

    error           reduce using rule 3 (instrucciones -> instruccion .)
    RVAR            reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    RPRINT          reduce using rule 3 (instrucciones -> instruccion .)
    RIF             reduce using rule 3 (instrucciones -> instruccion .)
    RWHILE          reduce using rule 3 (instrucciones -> instruccion .)
    RBREAK          reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    LLAVEC          reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (6) instruccion -> variables . ptc
    (4) ptc -> . PTCOMA
    (5) ptc -> .

    PTCOMA          shift and go to state 18
    error           reduce using rule 5 (ptc -> .)
    RVAR            reduce using rule 5 (ptc -> .)
    ID              reduce using rule 5 (ptc -> .)
    RPRINT          reduce using rule 5 (ptc -> .)
    RIF             reduce using rule 5 (ptc -> .)
    RWHILE          reduce using rule 5 (ptc -> .)
    RBREAK          reduce using rule 5 (ptc -> .)
    $end            reduce using rule 5 (ptc -> .)
    LLAVEC          reduce using rule 5 (ptc -> .)

    ptc                            shift and go to state 17

state 5

    (7) instruccion -> imprimir . ptc
    (4) ptc -> . PTCOMA
    (5) ptc -> .

    PTCOMA          shift and go to state 18
    error           reduce using rule 5 (ptc -> .)
    RVAR            reduce using rule 5 (ptc -> .)
    ID              reduce using rule 5 (ptc -> .)
    RPRINT          reduce using rule 5 (ptc -> .)
    RIF             reduce using rule 5 (ptc -> .)
    RWHILE          reduce using rule 5 (ptc -> .)
    RBREAK          reduce using rule 5 (ptc -> .)
    $end            reduce using rule 5 (ptc -> .)
    LLAVEC          reduce using rule 5 (ptc -> .)

    ptc                            shift and go to state 19

state 6

    (8) instruccion -> if .

    error           reduce using rule 8 (instruccion -> if .)
    RVAR            reduce using rule 8 (instruccion -> if .)
    ID              reduce using rule 8 (instruccion -> if .)
    RPRINT          reduce using rule 8 (instruccion -> if .)
    RIF             reduce using rule 8 (instruccion -> if .)
    RWHILE          reduce using rule 8 (instruccion -> if .)
    RBREAK          reduce using rule 8 (instruccion -> if .)
    $end            reduce using rule 8 (instruccion -> if .)
    LLAVEC          reduce using rule 8 (instruccion -> if .)


state 7

    (9) instruccion -> while .

    error           reduce using rule 9 (instruccion -> while .)
    RVAR            reduce using rule 9 (instruccion -> while .)
    ID              reduce using rule 9 (instruccion -> while .)
    RPRINT          reduce using rule 9 (instruccion -> while .)
    RIF             reduce using rule 9 (instruccion -> while .)
    RWHILE          reduce using rule 9 (instruccion -> while .)
    RBREAK          reduce using rule 9 (instruccion -> while .)
    $end            reduce using rule 9 (instruccion -> while .)
    LLAVEC          reduce using rule 9 (instruccion -> while .)


state 8

    (10) instruccion -> break . ptc
    (4) ptc -> . PTCOMA
    (5) ptc -> .

    PTCOMA          shift and go to state 18
    error           reduce using rule 5 (ptc -> .)
    RVAR            reduce using rule 5 (ptc -> .)
    ID              reduce using rule 5 (ptc -> .)
    RPRINT          reduce using rule 5 (ptc -> .)
    RIF             reduce using rule 5 (ptc -> .)
    RWHILE          reduce using rule 5 (ptc -> .)
    RBREAK          reduce using rule 5 (ptc -> .)
    $end            reduce using rule 5 (ptc -> .)
    LLAVEC          reduce using rule 5 (ptc -> .)

    ptc                            shift and go to state 20

state 9

    (11) instruccion -> error .

    error           reduce using rule 11 (instruccion -> error .)
    RVAR            reduce using rule 11 (instruccion -> error .)
    ID              reduce using rule 11 (instruccion -> error .)
    RPRINT          reduce using rule 11 (instruccion -> error .)
    RIF             reduce using rule 11 (instruccion -> error .)
    RWHILE          reduce using rule 11 (instruccion -> error .)
    RBREAK          reduce using rule 11 (instruccion -> error .)
    $end            reduce using rule 11 (instruccion -> error .)
    LLAVEC          reduce using rule 11 (instruccion -> error .)


state 10

    (15) variables -> RVAR . ID
    (16) variables -> RVAR . ID IGUAL expresion
    (17) variables -> RVAR . ID IGUAL casteo

    ID              shift and go to state 21


state 11

    (18) variables -> ID . IGUAL expresion
    (19) variables -> ID . IGUAL casteo
    (20) variables -> ID . IGUAL RNULL
    (21) variables -> ID . incdec
    (12) incdec -> . INC
    (13) incdec -> . DEC
    (14) incdec -> .

    IGUAL           shift and go to state 22
    INC             shift and go to state 24
    DEC             shift and go to state 25
    PTCOMA          reduce using rule 14 (incdec -> .)
    error           reduce using rule 14 (incdec -> .)
    RVAR            reduce using rule 14 (incdec -> .)
    ID              reduce using rule 14 (incdec -> .)
    RPRINT          reduce using rule 14 (incdec -> .)
    RIF             reduce using rule 14 (incdec -> .)
    RWHILE          reduce using rule 14 (incdec -> .)
    RBREAK          reduce using rule 14 (incdec -> .)
    $end            reduce using rule 14 (incdec -> .)
    LLAVEC          reduce using rule 14 (incdec -> .)

    incdec                         shift and go to state 23

state 12

    (56) imprimir -> RPRINT . PARA expresion PARC

    PARA            shift and go to state 26


state 13

    (51) if -> RIF . PARA expresion PARC LLAVEA instrucciones LLAVEC
    (52) if -> RIF . PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE LLAVEA instrucciones LLAVEC
    (53) if -> RIF . PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE if

    PARA            shift and go to state 27


state 14

    (54) while -> RWHILE . PARA expresion PARC LLAVEA instrucciones LLAVEC

    PARA            shift and go to state 28


state 15

    (55) break -> RBREAK .

    PTCOMA          reduce using rule 55 (break -> RBREAK .)
    error           reduce using rule 55 (break -> RBREAK .)
    RVAR            reduce using rule 55 (break -> RBREAK .)
    ID              reduce using rule 55 (break -> RBREAK .)
    RPRINT          reduce using rule 55 (break -> RBREAK .)
    RIF             reduce using rule 55 (break -> RBREAK .)
    RWHILE          reduce using rule 55 (break -> RBREAK .)
    RBREAK          reduce using rule 55 (break -> RBREAK .)
    $end            reduce using rule 55 (break -> RBREAK .)
    LLAVEC          reduce using rule 55 (break -> RBREAK .)


state 16

    (2) instrucciones -> instrucciones instruccion .

    error           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RVAR            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    ID              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RPRINT          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RIF             reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RWHILE          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RBREAK          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    LLAVEC          reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 17

    (6) instruccion -> variables ptc .

    error           reduce using rule 6 (instruccion -> variables ptc .)
    RVAR            reduce using rule 6 (instruccion -> variables ptc .)
    ID              reduce using rule 6 (instruccion -> variables ptc .)
    RPRINT          reduce using rule 6 (instruccion -> variables ptc .)
    RIF             reduce using rule 6 (instruccion -> variables ptc .)
    RWHILE          reduce using rule 6 (instruccion -> variables ptc .)
    RBREAK          reduce using rule 6 (instruccion -> variables ptc .)
    $end            reduce using rule 6 (instruccion -> variables ptc .)
    LLAVEC          reduce using rule 6 (instruccion -> variables ptc .)


state 18

    (4) ptc -> PTCOMA .

    error           reduce using rule 4 (ptc -> PTCOMA .)
    RVAR            reduce using rule 4 (ptc -> PTCOMA .)
    ID              reduce using rule 4 (ptc -> PTCOMA .)
    RPRINT          reduce using rule 4 (ptc -> PTCOMA .)
    RIF             reduce using rule 4 (ptc -> PTCOMA .)
    RWHILE          reduce using rule 4 (ptc -> PTCOMA .)
    RBREAK          reduce using rule 4 (ptc -> PTCOMA .)
    $end            reduce using rule 4 (ptc -> PTCOMA .)
    LLAVEC          reduce using rule 4 (ptc -> PTCOMA .)


state 19

    (7) instruccion -> imprimir ptc .

    error           reduce using rule 7 (instruccion -> imprimir ptc .)
    RVAR            reduce using rule 7 (instruccion -> imprimir ptc .)
    ID              reduce using rule 7 (instruccion -> imprimir ptc .)
    RPRINT          reduce using rule 7 (instruccion -> imprimir ptc .)
    RIF             reduce using rule 7 (instruccion -> imprimir ptc .)
    RWHILE          reduce using rule 7 (instruccion -> imprimir ptc .)
    RBREAK          reduce using rule 7 (instruccion -> imprimir ptc .)
    $end            reduce using rule 7 (instruccion -> imprimir ptc .)
    LLAVEC          reduce using rule 7 (instruccion -> imprimir ptc .)


state 20

    (10) instruccion -> break ptc .

    error           reduce using rule 10 (instruccion -> break ptc .)
    RVAR            reduce using rule 10 (instruccion -> break ptc .)
    ID              reduce using rule 10 (instruccion -> break ptc .)
    RPRINT          reduce using rule 10 (instruccion -> break ptc .)
    RIF             reduce using rule 10 (instruccion -> break ptc .)
    RWHILE          reduce using rule 10 (instruccion -> break ptc .)
    RBREAK          reduce using rule 10 (instruccion -> break ptc .)
    $end            reduce using rule 10 (instruccion -> break ptc .)
    LLAVEC          reduce using rule 10 (instruccion -> break ptc .)


state 21

    (15) variables -> RVAR ID .
    (16) variables -> RVAR ID . IGUAL expresion
    (17) variables -> RVAR ID . IGUAL casteo

    PTCOMA          reduce using rule 15 (variables -> RVAR ID .)
    error           reduce using rule 15 (variables -> RVAR ID .)
    RVAR            reduce using rule 15 (variables -> RVAR ID .)
    ID              reduce using rule 15 (variables -> RVAR ID .)
    RPRINT          reduce using rule 15 (variables -> RVAR ID .)
    RIF             reduce using rule 15 (variables -> RVAR ID .)
    RWHILE          reduce using rule 15 (variables -> RVAR ID .)
    RBREAK          reduce using rule 15 (variables -> RVAR ID .)
    $end            reduce using rule 15 (variables -> RVAR ID .)
    LLAVEC          reduce using rule 15 (variables -> RVAR ID .)
    IGUAL           shift and go to state 29


state 22

    (18) variables -> ID IGUAL . expresion
    (19) variables -> ID IGUAL . casteo
    (20) variables -> ID IGUAL . RNULL
    (27) expresion -> . expresion MAS expresion
    (28) expresion -> . expresion MENOS expresion
    (29) expresion -> . expresion POR expresion
    (30) expresion -> . expresion DIV expresion
    (31) expresion -> . expresion POT expresion
    (32) expresion -> . expresion MOD expresion
    (33) expresion -> . expresion MENORQUE expresion
    (34) expresion -> . expresion MAYORQUE expresion
    (35) expresion -> . expresion MENORIGUAL expresion
    (36) expresion -> . expresion MAYORIGUAL expresion
    (37) expresion -> . expresion IGUALIGUAL expresion
    (38) expresion -> . expresion DIFERENTE expresion
    (39) expresion -> . expresion AND expresion
    (40) expresion -> . expresion OR expresion
    (41) expresion -> . MENOS expresion
    (42) expresion -> . NOT expresion
    (43) expresion -> . PARA expresion PARC
    (44) expresion -> . ID incdec
    (45) expresion -> . ENTERO incdec
    (46) expresion -> . DECIMAL incdec
    (47) expresion -> . CADENA
    (48) expresion -> . CHARACTER
    (49) expresion -> . RTRUE
    (50) expresion -> . RFALSE
    (22) casteo -> . PARA tipo PARC expresion

    RNULL           shift and go to state 33
    MENOS           shift and go to state 34
    NOT             shift and go to state 35
    PARA            shift and go to state 36
    ID              shift and go to state 30
    ENTERO          shift and go to state 37
    DECIMAL         shift and go to state 38
    CADENA          shift and go to state 39
    CHARACTER       shift and go to state 40
    RTRUE           shift and go to state 41
    RFALSE          shift and go to state 42

    expresion                      shift and go to state 31
    casteo                         shift and go to state 32

state 23

    (21) variables -> ID incdec .

    PTCOMA          reduce using rule 21 (variables -> ID incdec .)
    error           reduce using rule 21 (variables -> ID incdec .)
    RVAR            reduce using rule 21 (variables -> ID incdec .)
    ID              reduce using rule 21 (variables -> ID incdec .)
    RPRINT          reduce using rule 21 (variables -> ID incdec .)
    RIF             reduce using rule 21 (variables -> ID incdec .)
    RWHILE          reduce using rule 21 (variables -> ID incdec .)
    RBREAK          reduce using rule 21 (variables -> ID incdec .)
    $end            reduce using rule 21 (variables -> ID incdec .)
    LLAVEC          reduce using rule 21 (variables -> ID incdec .)


state 24

    (12) incdec -> INC .

    PTCOMA          reduce using rule 12 (incdec -> INC .)
    error           reduce using rule 12 (incdec -> INC .)
    RVAR            reduce using rule 12 (incdec -> INC .)
    ID              reduce using rule 12 (incdec -> INC .)
    RPRINT          reduce using rule 12 (incdec -> INC .)
    RIF             reduce using rule 12 (incdec -> INC .)
    RWHILE          reduce using rule 12 (incdec -> INC .)
    RBREAK          reduce using rule 12 (incdec -> INC .)
    $end            reduce using rule 12 (incdec -> INC .)
    LLAVEC          reduce using rule 12 (incdec -> INC .)
    MAS             reduce using rule 12 (incdec -> INC .)
    MENOS           reduce using rule 12 (incdec -> INC .)
    POR             reduce using rule 12 (incdec -> INC .)
    DIV             reduce using rule 12 (incdec -> INC .)
    POT             reduce using rule 12 (incdec -> INC .)
    MOD             reduce using rule 12 (incdec -> INC .)
    MENORQUE        reduce using rule 12 (incdec -> INC .)
    MAYORQUE        reduce using rule 12 (incdec -> INC .)
    MENORIGUAL      reduce using rule 12 (incdec -> INC .)
    MAYORIGUAL      reduce using rule 12 (incdec -> INC .)
    IGUALIGUAL      reduce using rule 12 (incdec -> INC .)
    DIFERENTE       reduce using rule 12 (incdec -> INC .)
    AND             reduce using rule 12 (incdec -> INC .)
    OR              reduce using rule 12 (incdec -> INC .)
    PARC            reduce using rule 12 (incdec -> INC .)


state 25

    (13) incdec -> DEC .

    PTCOMA          reduce using rule 13 (incdec -> DEC .)
    error           reduce using rule 13 (incdec -> DEC .)
    RVAR            reduce using rule 13 (incdec -> DEC .)
    ID              reduce using rule 13 (incdec -> DEC .)
    RPRINT          reduce using rule 13 (incdec -> DEC .)
    RIF             reduce using rule 13 (incdec -> DEC .)
    RWHILE          reduce using rule 13 (incdec -> DEC .)
    RBREAK          reduce using rule 13 (incdec -> DEC .)
    $end            reduce using rule 13 (incdec -> DEC .)
    LLAVEC          reduce using rule 13 (incdec -> DEC .)
    MAS             reduce using rule 13 (incdec -> DEC .)
    MENOS           reduce using rule 13 (incdec -> DEC .)
    POR             reduce using rule 13 (incdec -> DEC .)
    DIV             reduce using rule 13 (incdec -> DEC .)
    POT             reduce using rule 13 (incdec -> DEC .)
    MOD             reduce using rule 13 (incdec -> DEC .)
    MENORQUE        reduce using rule 13 (incdec -> DEC .)
    MAYORQUE        reduce using rule 13 (incdec -> DEC .)
    MENORIGUAL      reduce using rule 13 (incdec -> DEC .)
    MAYORIGUAL      reduce using rule 13 (incdec -> DEC .)
    IGUALIGUAL      reduce using rule 13 (incdec -> DEC .)
    DIFERENTE       reduce using rule 13 (incdec -> DEC .)
    AND             reduce using rule 13 (incdec -> DEC .)
    OR              reduce using rule 13 (incdec -> DEC .)
    PARC            reduce using rule 13 (incdec -> DEC .)


state 26

    (56) imprimir -> RPRINT PARA . expresion PARC
    (27) expresion -> . expresion MAS expresion
    (28) expresion -> . expresion MENOS expresion
    (29) expresion -> . expresion POR expresion
    (30) expresion -> . expresion DIV expresion
    (31) expresion -> . expresion POT expresion
    (32) expresion -> . expresion MOD expresion
    (33) expresion -> . expresion MENORQUE expresion
    (34) expresion -> . expresion MAYORQUE expresion
    (35) expresion -> . expresion MENORIGUAL expresion
    (36) expresion -> . expresion MAYORIGUAL expresion
    (37) expresion -> . expresion IGUALIGUAL expresion
    (38) expresion -> . expresion DIFERENTE expresion
    (39) expresion -> . expresion AND expresion
    (40) expresion -> . expresion OR expresion
    (41) expresion -> . MENOS expresion
    (42) expresion -> . NOT expresion
    (43) expresion -> . PARA expresion PARC
    (44) expresion -> . ID incdec
    (45) expresion -> . ENTERO incdec
    (46) expresion -> . DECIMAL incdec
    (47) expresion -> . CADENA
    (48) expresion -> . CHARACTER
    (49) expresion -> . RTRUE
    (50) expresion -> . RFALSE

    MENOS           shift and go to state 34
    NOT             shift and go to state 35
    PARA            shift and go to state 43
    ID              shift and go to state 30
    ENTERO          shift and go to state 37
    DECIMAL         shift and go to state 38
    CADENA          shift and go to state 39
    CHARACTER       shift and go to state 40
    RTRUE           shift and go to state 41
    RFALSE          shift and go to state 42

    expresion                      shift and go to state 44

state 27

    (51) if -> RIF PARA . expresion PARC LLAVEA instrucciones LLAVEC
    (52) if -> RIF PARA . expresion PARC LLAVEA instrucciones LLAVEC RELSE LLAVEA instrucciones LLAVEC
    (53) if -> RIF PARA . expresion PARC LLAVEA instrucciones LLAVEC RELSE if
    (27) expresion -> . expresion MAS expresion
    (28) expresion -> . expresion MENOS expresion
    (29) expresion -> . expresion POR expresion
    (30) expresion -> . expresion DIV expresion
    (31) expresion -> . expresion POT expresion
    (32) expresion -> . expresion MOD expresion
    (33) expresion -> . expresion MENORQUE expresion
    (34) expresion -> . expresion MAYORQUE expresion
    (35) expresion -> . expresion MENORIGUAL expresion
    (36) expresion -> . expresion MAYORIGUAL expresion
    (37) expresion -> . expresion IGUALIGUAL expresion
    (38) expresion -> . expresion DIFERENTE expresion
    (39) expresion -> . expresion AND expresion
    (40) expresion -> . expresion OR expresion
    (41) expresion -> . MENOS expresion
    (42) expresion -> . NOT expresion
    (43) expresion -> . PARA expresion PARC
    (44) expresion -> . ID incdec
    (45) expresion -> . ENTERO incdec
    (46) expresion -> . DECIMAL incdec
    (47) expresion -> . CADENA
    (48) expresion -> . CHARACTER
    (49) expresion -> . RTRUE
    (50) expresion -> . RFALSE

    MENOS           shift and go to state 34
    NOT             shift and go to state 35
    PARA            shift and go to state 43
    ID              shift and go to state 30
    ENTERO          shift and go to state 37
    DECIMAL         shift and go to state 38
    CADENA          shift and go to state 39
    CHARACTER       shift and go to state 40
    RTRUE           shift and go to state 41
    RFALSE          shift and go to state 42

    expresion                      shift and go to state 45

state 28

    (54) while -> RWHILE PARA . expresion PARC LLAVEA instrucciones LLAVEC
    (27) expresion -> . expresion MAS expresion
    (28) expresion -> . expresion MENOS expresion
    (29) expresion -> . expresion POR expresion
    (30) expresion -> . expresion DIV expresion
    (31) expresion -> . expresion POT expresion
    (32) expresion -> . expresion MOD expresion
    (33) expresion -> . expresion MENORQUE expresion
    (34) expresion -> . expresion MAYORQUE expresion
    (35) expresion -> . expresion MENORIGUAL expresion
    (36) expresion -> . expresion MAYORIGUAL expresion
    (37) expresion -> . expresion IGUALIGUAL expresion
    (38) expresion -> . expresion DIFERENTE expresion
    (39) expresion -> . expresion AND expresion
    (40) expresion -> . expresion OR expresion
    (41) expresion -> . MENOS expresion
    (42) expresion -> . NOT expresion
    (43) expresion -> . PARA expresion PARC
    (44) expresion -> . ID incdec
    (45) expresion -> . ENTERO incdec
    (46) expresion -> . DECIMAL incdec
    (47) expresion -> . CADENA
    (48) expresion -> . CHARACTER
    (49) expresion -> . RTRUE
    (50) expresion -> . RFALSE

    MENOS           shift and go to state 34
    NOT             shift and go to state 35
    PARA            shift and go to state 43
    ID              shift and go to state 30
    ENTERO          shift and go to state 37
    DECIMAL         shift and go to state 38
    CADENA          shift and go to state 39
    CHARACTER       shift and go to state 40
    RTRUE           shift and go to state 41
    RFALSE          shift and go to state 42

    expresion                      shift and go to state 46

state 29

    (16) variables -> RVAR ID IGUAL . expresion
    (17) variables -> RVAR ID IGUAL . casteo
    (27) expresion -> . expresion MAS expresion
    (28) expresion -> . expresion MENOS expresion
    (29) expresion -> . expresion POR expresion
    (30) expresion -> . expresion DIV expresion
    (31) expresion -> . expresion POT expresion
    (32) expresion -> . expresion MOD expresion
    (33) expresion -> . expresion MENORQUE expresion
    (34) expresion -> . expresion MAYORQUE expresion
    (35) expresion -> . expresion MENORIGUAL expresion
    (36) expresion -> . expresion MAYORIGUAL expresion
    (37) expresion -> . expresion IGUALIGUAL expresion
    (38) expresion -> . expresion DIFERENTE expresion
    (39) expresion -> . expresion AND expresion
    (40) expresion -> . expresion OR expresion
    (41) expresion -> . MENOS expresion
    (42) expresion -> . NOT expresion
    (43) expresion -> . PARA expresion PARC
    (44) expresion -> . ID incdec
    (45) expresion -> . ENTERO incdec
    (46) expresion -> . DECIMAL incdec
    (47) expresion -> . CADENA
    (48) expresion -> . CHARACTER
    (49) expresion -> . RTRUE
    (50) expresion -> . RFALSE
    (22) casteo -> . PARA tipo PARC expresion

    MENOS           shift and go to state 34
    NOT             shift and go to state 35
    PARA            shift and go to state 36
    ID              shift and go to state 30
    ENTERO          shift and go to state 37
    DECIMAL         shift and go to state 38
    CADENA          shift and go to state 39
    CHARACTER       shift and go to state 40
    RTRUE           shift and go to state 41
    RFALSE          shift and go to state 42

    expresion                      shift and go to state 47
    casteo                         shift and go to state 48

state 30

    (44) expresion -> ID . incdec
    (12) incdec -> . INC
    (13) incdec -> . DEC
    (14) incdec -> .

    INC             shift and go to state 24
    DEC             shift and go to state 25
    MAS             reduce using rule 14 (incdec -> .)
    MENOS           reduce using rule 14 (incdec -> .)
    POR             reduce using rule 14 (incdec -> .)
    DIV             reduce using rule 14 (incdec -> .)
    POT             reduce using rule 14 (incdec -> .)
    MOD             reduce using rule 14 (incdec -> .)
    MENORQUE        reduce using rule 14 (incdec -> .)
    MAYORQUE        reduce using rule 14 (incdec -> .)
    MENORIGUAL      reduce using rule 14 (incdec -> .)
    MAYORIGUAL      reduce using rule 14 (incdec -> .)
    IGUALIGUAL      reduce using rule 14 (incdec -> .)
    DIFERENTE       reduce using rule 14 (incdec -> .)
    AND             reduce using rule 14 (incdec -> .)
    OR              reduce using rule 14 (incdec -> .)
    PTCOMA          reduce using rule 14 (incdec -> .)
    error           reduce using rule 14 (incdec -> .)
    RVAR            reduce using rule 14 (incdec -> .)
    ID              reduce using rule 14 (incdec -> .)
    RPRINT          reduce using rule 14 (incdec -> .)
    RIF             reduce using rule 14 (incdec -> .)
    RWHILE          reduce using rule 14 (incdec -> .)
    RBREAK          reduce using rule 14 (incdec -> .)
    $end            reduce using rule 14 (incdec -> .)
    LLAVEC          reduce using rule 14 (incdec -> .)
    PARC            reduce using rule 14 (incdec -> .)

    incdec                         shift and go to state 49

state 31

    (18) variables -> ID IGUAL expresion .
    (27) expresion -> expresion . MAS expresion
    (28) expresion -> expresion . MENOS expresion
    (29) expresion -> expresion . POR expresion
    (30) expresion -> expresion . DIV expresion
    (31) expresion -> expresion . POT expresion
    (32) expresion -> expresion . MOD expresion
    (33) expresion -> expresion . MENORQUE expresion
    (34) expresion -> expresion . MAYORQUE expresion
    (35) expresion -> expresion . MENORIGUAL expresion
    (36) expresion -> expresion . MAYORIGUAL expresion
    (37) expresion -> expresion . IGUALIGUAL expresion
    (38) expresion -> expresion . DIFERENTE expresion
    (39) expresion -> expresion . AND expresion
    (40) expresion -> expresion . OR expresion
